fix config bug, was getting append behavior without truncate(true)

--- a/src/components/config-board.css
+++ b/src/components/config-board.css
@@ -17,9 +17,9 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    margin: auto;
-    height: 300px;
+     height: 300px;
     width: 300px;
+    margin-left: 3rem;
 }
 
 .soundboard-configure>.config-pad>* {
