--- a/src/components/samples.css
+++ b/src/components/samples.css
@@ -16,6 +16,7 @@
     height: 3px;
     width: 0px;
     z-index: 3;
+    margin: 0 auto 0 0;
 }
 
 .sample-name {
